--- a/style.css
+++ b/style.css
@@ -1,5 +1,6 @@
 body {
-
+    min-height: 100%;
+    min-width: 100%;
 }
 
 .header {
@@ -21,12 +22,16 @@ body {
 }
 
 .main {
-    min-height: 320px;
+    min-height: 600px;
     position: relative;
-    padding-top: 10px;
+    padding-top: 60px;
     padding-bottom: 20px;
     width: 100%;
-    background-color: gray;
+    background-color: white;
     top: 0;
     left: 0;
+}
+
+.contents {
+    
 }
