Some map JS stuff
Inserted some google maps implementation via JS

--- a/style.css
+++ b/style.css
@@ -30,3 +30,12 @@ body {
     top: 0;
     left: 0;
 }
+
+#map {
+    height: 100%;
+  }
+  html, body {
+    height: 100%;
+    margin: 0;
+    padding: 0;
+  }
