--- a/style.css
+++ b/style.css
@@ -23,8 +23,9 @@ body {
 
 .main {
     min-height: 600px;
+    height: auto;
     position: relative;
-    padding-top: 60px;
+    padding-top: 55px;
     padding-bottom: 20px;
     width: 100%;
     background-color: white;
@@ -33,5 +34,11 @@ body {
 }
 
 .contents {
+    position: relative;
+    padding: 15px 40px 10px 40px;
+    min-height: 100%;
+}
+
+.footer {
     
 }
