--- a/style.css
+++ b/style.css
@@ -34,13 +34,14 @@ body {
 
 
 .contents {
-    
+    min-height: 600px;
 }
 
 #map {
-    height: 100%;
+    height: 400px;
+    width: 600px;
   }
-  html, body {
+html, body {
     height: 100%;
     margin: 0;
     padding: 0;
