--- a/style.css
+++ b/style.css
@@ -12,21 +12,21 @@ body {
     top: 0;
     left: 0;
     z-index: 100;
+    padding-left: 20px;
+    padding-top: 10px;
 }
 
 .logo {
     
     position: relative;
-    left: 20px;
-    top: 10px;
 }
 
 .main {
-    min-height: 600px;
-    height: auto;
+    min-height: 400px;
+    height: 70vh;
     position: relative;
     padding-top: 61px;
-    padding-bottom: 20px;
+    padding-bottom: 5px;
     width: 100%;
     background-color: white;
     top: 0;
@@ -38,8 +38,8 @@ body {
 .contents {
     background-color: white;
     position: relative;
-    padding-top: 15px;
-    padding-bottom: 10px;
+    padding-top: 20px;
+    padding-bottom: 5px;
     padding-left: 20px;
     padding-right: 20px;
     width: 85%;
@@ -48,12 +48,15 @@ body {
 }
 
 .footer {
-    
+    text-align: center;
 }
 
+.footer-text {
+    opacity: 0.6;
+}
 
 #map {
-    height: 400px;
+    height: 100%;
     width: 100%;
   }
 
@@ -63,3 +66,16 @@ html, body {
     padding: 0;
 }
 
+.logo-div {
+    background-color: red;
+    width: 233;
+    height: 100%;
+    float: left;
+}
+
+.navigation {
+    background-color: blue;
+    width: 40%;
+    height: 100%;
+    float: right;
+}
