--- a/style.css
+++ b/style.css
@@ -8,16 +8,15 @@ body {
     box-shadow: 0 2px 4px 1px rgba(0,0,0,0.1);
     position: fixed;
     width: 100%;
-    height: 61px;
+    height: 54px;
     top: 0;
     left: 0;
     z-index: 100;
-    padding-left: 20px;
-    padding-top: 10px;
+    padding-left: 15px;
+    padding-top: 5px;
 }
 
 .logo {
-    
     position: relative;
 }
 
@@ -67,15 +66,26 @@ html, body {
 }
 
 .logo-div {
-    background-color: red;
+    background-color: white;
     width: 233;
     height: 100%;
     float: left;
+    margin-right: 15px;
 }
 
 .navigation {
     background-color: blue;
     width: 40%;
     height: 100%;
-    float: right;
+    float: left;
+}
+
+.navigation-div {
+    margin: 0;
+    width: 50%;
+    height: 100%;
+    float:left;
+    text-align: center;
+    vertical-align: middle;
+    margin-top: 18px;
 }
