--- a/style.css
+++ b/style.css
@@ -15,15 +15,9 @@ body {
     top: 0;
     left: 0;
     z-index: 100;
-<<<<<<< HEAD
-    vertical-align: center;
-    /** float: left; */
-    margin: 0px auto 0px auto;
-    
-=======
     padding-left: 20px;
     padding-top: 10px;
->>>>>>> ac084c32d180c1601ec6596b7f045fcb2ce25a9a
+    vertical-align: middle;
 }
 
 /*ul {
@@ -40,12 +34,6 @@ body {
 .logo {
     
     position: relative;
-<<<<<<< HEAD
-    left: 20px;
-    top: 10px;
-    margin-right: 5%;
-=======
->>>>>>> ac084c32d180c1601ec6596b7f045fcb2ce25a9a
 }
 
 .main {
@@ -101,8 +89,31 @@ html, body {
 }
 
 .navigation {
-    background-color: blue;
+    
+    margin-top: 10px; 
+    font-family: "Century Gothic", CenturyGothic, AppleGothic, sans-serif; font-size: 24px;
+    background-color: white;
+    text-align: center;
+    vertical-align: middle;
     width: 40%;
-    height: 100%;
+    height: 50%;
     float: right;
 }
+
+.navigation a{
+
+    text-decoration: none;
+    font-size: 20px;
+  
+    color: black;
+   /* background-color: #2e2e2e;*/
+    top: 10px;
+    padding-bottom: 9px;
+    padding-left: 12px;
+    padding-right: 12px;
+  }
+
+.navigation a:hover {
+    color: #808080;
+      text-shadow: 0 7px 7px rgba(0, 0, 0, 0.5);
+    }
