--- a/style.css
+++ b/style.css
@@ -74,12 +74,21 @@ body {
 #map {
     height: 100%;
     width: 100%;
-  }
-  #maplookup {
-    height: 75%;
-    width: 70%;
-    margin: 10px 10% 0 10%;
-  }
+}
+
+#mapcontainer {
+height: 30%;
+width: 75%;
+margin: 10px 10% 0 10%;
+}
+
+#maplookup {
+height: 100%;
+width: 100%;
+}
+
+#datadiv {
+}
 
 
 html, body {
