--- a/style.css
+++ b/style.css
@@ -77,7 +77,7 @@ body {
 }
 
 #mapcontainer {
-height: 30%;
+height: 60%;
 width: 75%;
 margin: 10px 10% 0 10%;
 }
@@ -216,3 +216,19 @@ html, body {
     z-index: 5;
   }
 
+#datadiv {
+    font-size: 150%;
+    text-align: center;
+}
+
+#datadiv p{
+    margin-block-start: 0;
+    margin-block-end: 0;
+    margin-top: 5px;
+}
+
+#datadiv h2 {
+    font-size: 50%;
+    text-align: center;
+    color: gray;
+}
